# TinyLLM

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml
artifacts/qwen25_1_5b_instruct_qlora_v1/: hf_train_setup.json
artifacts/qwen25_1_5b_instruct_qlora_v1/adapter/: adapter_config.json
artifacts/qwen25_1_5b_instruct_qlora_v1/plots/: plot_summary.json
artifacts/qwen25_1_5b_instruct_qlora_v1/smoke/: posttrain_smoke.jsonl
artifacts/tiny_chat_wide_v1/: eval_test.json  train_setup.json
artifacts/tiny_chat_wide_v1/tokenizer/: tokenizer.json  tokenizer_meta.json
artifacts/tiny_rfn/: dataset_summary.json  eval_test.json  history.json  train_setup.json
artifacts/tiny_rfn/tokenizer/: tokenizer.json  tokenizer_meta.json
artifacts/tiny_rfn_v2/tokenizer/: tokenizer.json  tokenizer_meta.json
configs/: qwen25_1_5b_instruct_qlora.toml  smoke.toml  smoke_chat.toml  smoke_v2.toml  tiny_chat.toml  tiny_chat_wide.toml  tiny_rfn.toml  tiny_rfn_v2.toml
deploy/: Dockerfile.prod  README.md  deploy-prod.sh  docker-compose.prod.yml  model-release.env
docs/: chat-training.md  hf-qlora.md  vast-docker.md  vast-hf-qlora.md  vastai.md
scripts/: vast-create-instance.sh  vast-hf-qlora-finalize.sh
src/tinyllm/: __init__.py  app.py  cache_tokens.py  chat.py  config.py  data.py  evaluate.py  generate.py  hf_config.py  hf_generate.py  hf_plot.py  hf_prepare.py  hf_sft.py  hf_smoke.py  hf_worker.py  inference.py  model.py  prepare_dataset.py  remote_inference.py  tokenizer.py  train.py  utils.py
