[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "tinyllm-russian-finance"
version = "0.1.0"
description = "Educational tiny decoder-only language model trained from scratch on RussianFinancialNews."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "accelerate>=1.2.0",
  "bitsandbytes>=0.48.0",
  "datasets>=3.3.0",
  "gradio>=5.23.0",
  "matplotlib>=3.10.0",
  "numpy>=2.1.0",
  "peft>=0.18.0",
  "tokenizers>=0.20.0",
  "torch>=2.5.0,<2.11.0",
  "transformers>=4.57.0",
  "trl>=0.23.0",
  "tqdm>=4.67.0",
]

[project.scripts]
tinyllm-hf-prepare = "tinyllm.hf_prepare:main"
tinyllm-hf-smoke = "tinyllm.hf_smoke:main"
tinyllm-hf-train = "tinyllm.hf_sft:main"
tinyllm-hf-generate = "tinyllm.hf_generate:main"
tinyllm-hf-plot = "tinyllm.hf_plot:main"
tinyllm-prepare = "tinyllm.prepare_dataset:main"
tinyllm-train-tokenizer = "tinyllm.tokenizer:main"
tinyllm-cache-tokens = "tinyllm.cache_tokens:main"
tinyllm-train = "tinyllm.train:main"
tinyllm-eval = "tinyllm.evaluate:main"
tinyllm-generate = "tinyllm.generate:main"
tinyllm-demo = "tinyllm.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tinyllm"]
